# UGV_Project

./: Arm_Module.ino  Arm_Module_v2  I2C_Experiment.ino  I2C_Experiment.py  RPI_Code.py  RPI_code_v2.py  Serial Command  Serial_Command_Experiment.ino  Stepper_Module_Number_Input.ino  Stepper_Module__Thumbstick.ino
.github/workflows/: deploy-ui-server.yml  deploy-ui.yml
ugv_rpi_brain/: README.md  main.py  pyproject.toml
ugv_rpi_brain/shared/: types.py
ugv_rpi_brain/tests/: test_ugv_rpi_brain.py
ugv_rpi_brain/ugv_rpi_brain/: __init__.py  main.py  robotic_arm.py
ugv_ui/: .eslintrc.js  package.json
ugv_ui/src/: index.scss  index.tsx
ugv_ui/src/Components/App/: App.module.css  App.scss  App.tsx  AppActions.ts  AppState.ts  create.tsx
ugv_ui/src/Components/CommandLine/: CommandLine.module.css  CommandLine.scss  CommandLine.tsx  create.tsx
ugv_ui/src/Components/CommandList/: CommandList.scss  CommandList.tsx
ugv_ui/src/Components/ConnectionForm/: ConnectionForm.scss  ConnectionForm.state.ts  ConnectionForm.tsx  create.tsx
ugv_ui/src/Components/ConnectionModal/: ConnectionModal.scss  ConnectionModal.state.ts  ConnectionModal.tsx  create.tsx
ugv_ui/src/Shared/: types.ts
ugv_ui/src/Socket/: SocketEmits.ts  SocketManager.ts  SocketMessageChannel.ts  events_general.ts
ugv_ui_server/: .eslintignore  .eslintrc.js  .gitignore  package.json  rollup.config.js  tsconfig.json
ugv_ui_server/src/: index.ts  register.ts
ugv_ui_server/src/rpi_sockets/: register.ts
ugv_ui_server/src/shared/: types.ts
ugv_ui_server/src/ui_sockets/: register.ts
(+4 files in other folders)
