[tool.poetry]
authors = ["robustprogram <robustprogram@gmail.com>"]
description = ""
name = "ugv_rpi_brain"
version = "0.1.0"

[tool.poetry.dependencies]
Flask-SocketIO = "^5.1.1"
python = "^3.8"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
